--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/glm"]
 	path = vendor/glm
 	url = https://github.com/g-truc/glm
+[submodule "vendor/soil2"]
+	path = vendor/soil2
+	url = https://github.com/Jacob-Tate/soil2-cmake
